Fixed a bug in jump to step and integrated the feature into the UI, working well!
The bug was if you were jumping back to a step you would end up on the one before. it.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -145,7 +145,7 @@ body {
     border-radius: 2px;
     font-size   :   11px;
     font-family: Arial,Helvetica,sans-serif;
-    
+    cursor: pointer;
 }
 
 .undo {
